--- a/homework01/homework_differentiation.ipynb
+++ b/homework01/homework_differentiation.ipynb
@@ -46,18 +46,9 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\frac{dy}{dx} = \n",
+    "\\frac{dy}{dx} = 2x\n",
     "$$ "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -78,18 +69,9 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\frac{dy}{dA} =\n",
+    "\\frac{dy}{dA} = B^T\n",
     "$$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -112,7 +94,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\frac{dy}{dx} =\n",
+    "\\frac{dy}{dx} = Ac\n",
     "$$"
    ]
   },
@@ -121,7 +103,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\frac{dy}{dA} =\n",
+    "\\frac{dy}{dA} = xc^T\n",
     "$$ "
    ]
   },
@@ -134,15 +116,6 @@
     "tr(ABC) = tr (CAB)\n",
     "$$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -200,7 +173,7 @@
     "\n",
     "**Find**\n",
     "$$\n",
-    "\\frac{dJ}{dF} =  \n",
+    "\\frac{dJ}{dF} = 2 (F - X)\n",
     "$$ \n",
     "and \n",
     "$$\n",
@@ -244,5 +217,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
