--- a/homework01/homework_modules.ipynb
+++ b/homework01/homework_modules.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,6 +193,9 @@
     "        \"\"\"\n",
     "\n",
     "        # Your code goes here. ################################################\n",
+    "        self.output = input\n",
+    "        for module in self.modules:\n",
+    "            self.output = module.forward[self.output]\n",
     "        return self.output\n",
     "\n",
     "    def backward(self, input, gradOutput):\n",
@@ -208,7 +211,7 @@
     "             \n",
     "        !!!\n",
     "                \n",
-    "        To ech module you need to provide the input, module saw while forward pass, \n",
+    "        To each module you need to provide the input, module saw while forward pass, \n",
     "        it is used while computing gradients. \n",
     "        Make sure that the input for `i-th` layer the output of `module[i]` (just the same input as in forward pass) \n",
     "        and NOT `input` to this Sequential module. \n",
@@ -217,6 +220,14 @@
     "        \n",
     "        \"\"\"\n",
     "        # Your code goes here. ################################################\n",
+    "        modules_outputs = []\n",
+    "        for module in self.modules:\n",
+    "            module_input = input if len(modules_outputs) == 0 else modules_outputs[-1]\n",
+    "            modules_outputs.append(module.forward(module_input))\n",
+    "\n",
+    "        self.gradInput = gradOutput\n",
+    "        for i in range(len(self.modules) - 1, -1, -1):\n",
+    "            self.gradInput = self.modules[i].backward(modules_outputs[i], self.gradInput)\n",
     "        return self.gradInput\n",
     "      \n",
     "\n",
@@ -279,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,18 +314,18 @@
     "        \n",
     "    def updateOutput(self, input):\n",
     "        # Your code goes here. ################################################\n",
-    "        # self.output = ...\n",
+    "        self.output = np.dot(input, self.W.T) + self.b\n",
     "        return self.output\n",
     "    \n",
     "    def updateGradInput(self, input, gradOutput):\n",
     "        # Your code goes here. ################################################\n",
-    "        # self.gradInput = ...\n",
+    "        self.gradInput = np.dot(gradOutput, self.W)\n",
     "        return self.gradInput\n",
     "    \n",
     "    def accGradParameters(self, input, gradOutput):\n",
     "        # Your code goes here. ################################################\n",
-    "        # self.gradW = ... ; self.gradb = ...\n",
-    "        pass\n",
+    "        self.gradW = np.dot(gradOutput.T, input) \n",
+    "        self.gradb = gradOutput.sum(axis=0)\n",
     "    \n",
     "    def zeroGradParameters(self):\n",
     "        self.gradW.fill(0)\n",
@@ -362,10 +373,13 @@
     "        self.output = np.subtract(input, input.max(axis=1, keepdims=True))\n",
     "        \n",
     "        # Your code goes here. ################################################\n",
+    "        self.output = np.exp(input)\n",
+    "        self.output = (self.output.T / self.output.sum(axis=1)).T \n",
     "        return self.output\n",
     "    \n",
     "    def updateGradInput(self, input, gradOutput):\n",
     "        # Your code goes here. ################################################\n",
+    "        self.gradInput = ...\n",
     "        return self.gradInput\n",
     "    \n",
     "    def __repr__(self):\n",
@@ -406,6 +420,7 @@
     "    \n",
     "    def updateGradInput(self, input, gradOutput):\n",
     "        # Your code goes here. ################################################\n",
+    "        self.gradInput = \n",
     "        return self.gradInput\n",
     "    \n",
     "    def __repr__(self):\n",
@@ -1163,14 +1178,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
